--- a/app.json
+++ b/app.json
@@ -1,3 +1,4 @@
+# ©️ @SACHIN_OWNER || @V_VIP_OWNER
 {
     "name": "❖ | sᴀɴᴀᴛᴀɴɪ ꭙ ʙᴏᴛ | ❖",
     "logo": "https://graph.org/file/dc415607712c2ce5b37be.jpg",
