--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
-# ©️ @SACHIN_OWNER || @V_VIP_OWNER
 {
     "name": "❖ | sᴀɴᴀᴛᴀɴɪ ꭙ ʙᴏᴛ | ❖",
-    "logo": "https://graph.org/file/dc415607712c2ce5b37be.jpg",
+    "logo": "https://telegra.ph/file/fc0c1b85d1f99b9a21043.jpg",
     "keywords": [
         "telegram",
         "telethon",
