--- a/heroku.yml
+++ b/heroku.yml
@@ -3,3 +3,8 @@ build:
     ItzSanatani: Dockerfile
 run:
   ItzSanatani: python3 -m main.py
+
+
+# ©️ @SACHIN_OWNER || @V_VIP_OWNER
+# ©️ @SACHIN_OWNER || @V_VIP_OWNER
+
